--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name = "colorPrimary">#008577</color>
-	<color name = "colorPrimaryDark">#00574B</color>
-	<color name = "colorAccent">#D81B60</color>
+	<!-- The app branding color for the app -->
+	<color name = "colorPrimary">#F0514B</color>
+	
+	<!-- Darker variant for the status bar and contextual app bars -->
+	<color name = "colorPrimaryDark">#C0403C</color>
+	
+	<!-- Accent color for UI controls link checkboxes and text fields -->
+	<color name = "colorAccent">#F0514B</color>
+	
+	<!-- Primary color for the editor -->
+	<color name = "editorColorPrimary">#2D3640</color>
+	
+	<!-- Primary dark color for the editor -->
+	<color name = "editorColorPrimaryDark">#394450</color>
 </resources>
